Mainly formatting changes